[gd_scene load_steps=12 format=2]

[ext_resource path="res://art/square.png" type="Texture" id=1]
[ext_resource path="res://scripts/combat/Square.gd" type="Script" id=2]
[ext_resource path="res://art/fonts/arialbd.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 24.5 )

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.203922, 0.764706, 0.137255, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.552941, 0.521569, 0.521569, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.631373, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=7]
resource_name = "AllyHighlightAnimation"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Highlight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0745098, 0.537255, 0.0705882, 0 ), Color( 0.0745098, 0.537255, 0.0705882, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "EnemyHighlightAnimation"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Highlight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.890196, 0.145098, 0.145098, 0 ), Color( 0.890196, 0.145098, 0.145098, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "UnitTurnAnimation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Highlight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.890196, 0.807843, 0.145098, 1 ), Color( 0.890196, 0.807843, 0.145098, 0 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 3 )

[node name="Area2D" type="Area2D" groups=["Unit"]]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
scale = Vector2( 1.8, 1.8 )
shape = SubResource( 1 )

[node name="SolidHighlight" type="Sprite" parent="."]
visible = false
modulate = Color( 0.890196, 0.145098, 0.145098, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Highlight" type="Sprite" parent="."]
visible = false
modulate = Color( 0.890196, 0.145098, 0.145098, 0.933333 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
material = SubResource( 2 )
margin_left = -61.0
margin_top = -75.0
margin_right = 59.0
margin_bottom = -57.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false

[node name="Label" type="Label" parent="HealthBar"]
margin_top = 3.0
margin_right = 120.0
margin_bottom = 17.0
text = "50/100"
align = 1
valign = 1

[node name="GlowAnimator" type="AnimationPlayer" parent="."]
anims/AllyHighlightAnimation = SubResource( 7 )
anims/EnemyHighlightAnimation = SubResource( 6 )
anims/UnitTurnAnimation = SubResource( 5 )

[node name="TurnOrder" type="Label" parent="."]
margin_left = -92.0
margin_top = -80.0
margin_right = -66.0
margin_bottom = -52.0
custom_fonts/font = SubResource( 8 )
text = "12"
align = 2
valign = 1

[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
